--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,20 @@ body {
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
-
+   
+::-moz-selection {
+  color: #fff;
+  background: #bdbdbd;
+}
+::-webkit-selection {
+    color:#fff;
+    background-color: #bdbdbd;
+}
+::selection {
+  color: #fff;
+  background: #bdbdbd;
+}
+   
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
     overflow: hidden;
