--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,19 +14,7 @@ body {
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
-   
-::-moz-selection {
-  color: #fff;
-  background: #bdbdbd;
-}
-::-webkit-selection {
-    color:#fff;
-    background-color: #bdbdbd;
-}
-::selection {
-  color: #fff;
-  background: #bdbdbd;
-}
+
    
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
@@ -326,3 +314,19 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a,
   -webkit-transition: $global-transition;
   transition: $global-transition;
 }
+<style type="text/css">
+::selection {
+    color:#fff;
+    background-color: #bdbdbd ;
+}
+
+::-moz-selection {
+    color:#fff;
+    background-color: #bdbdbd ;
+}
+
+::-webkit-selection {
+    color:#fff;
+    background-color: #bdbdbd ;
+}
+</style>
