--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,22 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <style>
+        ::selection {
+    color:#fff;
+    background-color: #bdbdbd ;
+}
+
+        ::-moz-selection {
+    color:#fff;
+    background-color: #bdbdbd ;
+}
+
+        ::-webkit-selection {
+    color:#fff;
+    background-color: #bdbdbd ;
+}
+    </style>
   </head>
 
   <body>
