--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,17 +12,17 @@ layout: compress
     <style>
         ::selection {
     color:#fff;
-    background-color: #bdbdbd ;
+    background-color: #FDF5E6 ;
 }
 
         ::-moz-selection {
     color:#fff;
-    background-color: #bdbdbd ;
+    background-color: #FDF5E6 ;
 }
 
         ::-webkit-selection {
     color:#fff;
-    background-color: #bdbdbd ;
+    background-color: #FDF5E6 ;
 }
     </style>
   </head>
