--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,11 @@ layout: compress
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             document.querySelectorAll('a').forEach(function(link) {
-                link.setAttribute('target', '_blank');
+                // 检查链接是否有 'no-blank' 类
+                if (!link.classList.contains('no-blank')) {
+                    link.setAttribute('target', '_blank');
+                    link.setAttribute('rel', 'noopener noreferrer');
+                }
             });
         });
     </script>
