--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,23 +12,23 @@ layout: compress
     <style>
         ::selection {
     color:#fff;
-    background-color: #8EE5EE ;
+    background-color: #494E52 ;
     }
 
         ::-moz-selection {
     color:#fff;
-    background-color: #8EE5EE ;
+    background-color: #494E52 ;
     }
 
         ::-webkit-selection {
     color:#fff;
-    background-color: #8EE5EE ;
+    background-color: #494E52 ;
     }
     </style>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             document.querySelectorAll('a').forEach(function(link) {
-                if (!link.classList.contains('no-blank')) {
+                if (!link.classList.contains('no-b')) {
                     link.setAttribute('target', '_blank');
                 }
             });
